GS-10118, set overflow and height properties to show drop-down menu and display issues for ie7

--- a/src/webapp/res/css/promo/schoolChoicePackPromo.css
+++ b/src/webapp/res/css/promo/schoolChoicePackPromo.css
@@ -128,8 +128,17 @@ body.nocol #schoolChoicePackPromo div#email_go {
     display: inline;
 }
 #schoolChoicePackPromo #gradeSelect {
-    overflow: hidden;
+    overflow: visible;
     clear: both;
+}
+body.ie7 #scpp_picker {
+    height: 27px;
+}
+body.ie7 #gradeSelect {
+    height: 56px;
+}
+body.ie7 #email_go {
+    height: 30px;
 }
 #schoolChoicePackPromo div#email_go #send {
     margin:0;
